environment/deployment-esp.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: esp-environment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: esp-environment
    spec:
      containers:
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "--http2_port=9091",
          "--http_port=8080",
          "--service=environment.endpoints.olamai-d64a7.cloud.goog",
          "--rollout_strategy=managed",
          "--backend=grpc://environment.default.svc:9090",
          "--cors_preset=basic",
          "--cors_allow_headers=Keep-Alive,User-Agent,Cache-Control,Content-Type,Content-Transfer-Encoding,X-Accept-Content-Transfer-Encoding,X-Accept-Response-Streaming,X-User-Agent,X-Grpc-Web,Grpc-Timeout,Authorization,authorization",
          "--cors_expose_headers=grpc-status,grpc-message,authorization",
          "--enable_debug",
          # Sets the healthcheck location to /${-z} meaning it is just / because this is blank
          "-z",
          " "
        ]
        ports:
          - containerPort: 9091
