environment/environment-staging.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis-db-svc
spec:
  ports:
  - port: 6379
    targetPort: 6379
---
kind: Endpoints
apiVersion: v1
metadata:
  name: redis-db-svc
subsets:
- addresses:
  - ip: 10.0.2.2
  ports:
  - port: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: esp-grpc-environment-http2
spec:
  ports:
  # Port that accepts gRPC and JSON/HTTP2 requests over HTTP.
  - port: 8090
    targetPort: 9091
    protocol: TCP
    name: http2
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: esp-grpc-environment
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: esp-grpc-environment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: esp-grpc-environment
    spec:
      containers:
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "--http2_port=9091",
          "--http_port=8080",
          "--service=environment.endpoints.olamai-d64a7.cloud.goog",
          "--rollout_strategy=managed",
          "--backend=grpc://127.0.0.1:9090",
          "--cors_preset=basic",
          "--cors_allow_headers=Keep-Alive,User-Agent,Cache-Control,Content-Type,Content-Transfer-Encoding,X-Accept-Content-Transfer-Encoding,X-Accept-Response-Streaming,X-User-Agent,X-Grpc-Web,Grpc-Timeout,Authorization,authorization",
          "--cors_expose_headers=grpc-status,grpc-message,authorization",
          "--enable_debug"
        ]
        ports:
          - containerPort: 9091
      - name: environment
        image: terrariumai/environment:0.0.1
        args: [
          "-env=staging",
          "-redis-addr=redis-db-svc.default.svc:6379"
        ]
        imagePullPolicy: Always
        ports:
          - containerPort: 9090
