environment/service-staging.yaml
# This service is to allow collective direct access (bipass authorization)
apiVersion: v1
kind: Service
metadata:
  name: environment-stg
spec:
  ports:
  # Port that accepts gRPC and JSON/HTTP2 requests over HTTP.
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: http2
  selector:
    app: environment-stg
  type: NodePort
