environment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: environment-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: envoy-proxy-ip
  labels:
    app: environment
spec:
  backend:
    serviceName: esp-environment
    servicePort: 80
